syntax = "proto3";

package com.proto.customer;

option java_multiple_files = true;
option java_package = "com.example.customer";


service CustomerService {
  rpc createCustomer(CreateCustomerRequest) returns (CustomerResponse) {};
  rpc getAllCustomers(GetAllCustomersRequest) returns (GetAllCustomersResponse) {};
}

message CreateCustomerRequest {
  string name = 1;
  string email = 2;
  string password = 3;
  string phone_number = 4;
  repeated string policy_name = 5;
  repeated string policy_id = 6;
}

message CustomerResponse {
  string id = 1;
}
message GetAllCustomersRequest {}

message Customer {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  string phone_number = 5;
  repeated string policy_name = 6;
  repeated string policy_id = 7;
}

message GetAllCustomersResponse {
  repeated Customer customers = 1;
}

  
  
  